--- a/app/assets/stylesheets/password_new.scss
+++ b/app/assets/stylesheets/password_new.scss
@@ -8,6 +8,20 @@
   text-align: center;
   margin-top: 30px;
   margin-bottom: 10px;
-  font-size: 35px;
+  font-size: 20px;
   font-family: Hiragino Sans W6;
+}
+
+.mail_field{
+text-align: center;
+}
+
+.password_actions{
+  text-align: center;
+  margin-top: 30px;
+}
+
+.pasword_render_links{
+  text-align: center;
+  margin-top: 50px;
 }
