--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -4,7 +4,7 @@
 
 <!--投稿とユーザーはリンクにすること-->
 <div class="main-visual">
- <div class="">ユーザー、投稿検索</div>
+ <div class="">ユーザー/投稿検索</div>
 
  <div class="search_form">
     <%= form_with url: search_path, local: true, method: :get do |f| %>
