--- a/app/assets/stylesheets/posts_index.scss
+++ b/app/assets/stylesheets/posts_index.scss
@@ -9,13 +9,25 @@
   background-color: #F5F5F5	;
 }
 
+.search{
+ text-align: center;
+ font-size: 30px;
+ padding-top: 50px;
+ font-family: HiraMinProN-W6;
+}
+
+.search_form{
+ text-align: center;
+ padding-top: 30px;
+}
+
 main{
   width: 100%;
 }
 
 .post_all{
  text-align: center;
- padding-top: 10px;
+ padding-top: 80px;
  padding-bottom: 50px;
  font-size: 30px;
  font-family: HiraMinProN-W6;
