--- a/app/assets/stylesheets/posts_show.scss
+++ b/app/assets/stylesheets/posts_show.scss
@@ -53,3 +53,13 @@
   text-align: center;
   margin-top: 30px;
 }
+
+.post_comments{
+  text-align: center;
+  margin-top: 50px;
+}
+
+.post_comments2{
+  text-align: center;
+  margin-top: 50px;
+}
