--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -39,3 +39,24 @@
 </div>
 <% end %>
 
+<!--コメント機能-->
+<div class=post_comments>
+  <p>コメント件数：<%= @post.post_comments.count %></p>
+  <% @post.post_comments.each do |post_comment| %>
+    <%= image_tag post_comment.user.get_profile_image(50,50) %>
+    <%= post_comment.user.username %>
+    <%= post_comment.created_at.strftime('%Y/%m/%d') %>
+     <% if post_comment.user == current_user %>
+      <%= link_to "削除", post_post_comment_path(post_comment.post, post_comment), method: :delete %>
+    <% end %>
+    <p><%= post_comment.comment %></p>
+   
+  <% end %>
+</div>
+<div class=post_comments2>
+  <%= form_with model: [@post, @post_comment] do |f| %>
+    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+    <p><%= f.submit "送信する" %></p>
+  <% end %>
+</div>
+
