--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -43,8 +43,12 @@
 <div class=post_comments>
   <p>コメント件数：<%= @post.post_comments.count %></p>
   <% @post.post_comments.each do |post_comment| %>
+  
+   <%= link_to user_path(post_comment.user) do %>
     <%= image_tag post_comment.user.get_profile_image(50,50) %>
-    <%= post_comment.user.username %>
+   <% end %>
+   
+    <p><%= post_comment.user.username %></p>
     <%= post_comment.created_at.strftime('%Y/%m/%d') %>
      <% if post_comment.user == current_user %>
       <%= link_to "削除", post_post_comment_path(post_comment.post, post_comment), method: :delete %>
