--- a/app/assets/stylesheets/posts_show.scss
+++ b/app/assets/stylesheets/posts_show.scss
@@ -25,8 +25,13 @@
 
 
 .show_img{
-   text-align: center;
-   padding: 20px;
+  text-align: center;
+  padding: 20px;
+}
+
+.post_created{
+  text-align: center;
+  font-size:15px;
 }
 
 .shop_road_name{
