--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -20,7 +20,9 @@
  <div class="show_img">
 <%= image_tag @post.image, size: "500x500" %>
 </div>
-
+<div class ="post_created">
+ <%= @post.created_at.strftime('%Y/%m/%d') %>
+</div>
 <div class="shop_road_name">施設や道の場所名
 <p><%= @post.title %></p>
 </div>
@@ -59,7 +61,7 @@
 </div>
 <div class=post_comments2>
   <%= form_with model: [@post, @post_comment] do |f| %>
-    <%= f.text_area :comment, rows: '5', placeholder: "コメントをここに" %>
+    <%= f.text_area :comment, rows: '5', placeholder: "コメントをしてみましょう" %>
     <p><%= f.submit "送信する" %></p>
   <% end %>
 </div>
