--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,6 +1,6 @@
 ユーザー一覧
 <% @users.each do |user| %>
- <%= link_to user_path(user.id) do %>
+ <%= link_to  admin_user_path(user.id) do %>
   <%= image_tag user.get_profile_image(50,50) %>
  <% end %>
  <%= user.username %>
