--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
 
   <body>
     <header>
-      <div class= "title">推し巡り</div>
+     <div class= "title">推し巡り</div>
     
      <div class="header-bottom">
      <% if user_signed_in? %>
@@ -22,7 +22,6 @@
       <%= link_to "マイページ", user_path(current_user) %>
       <%= link_to "ログアウト", destroy_user_session_path, method: :delete %>
      </div>  
-    
       <!--ここまで、ログインしている時の表示-->
       
       <!--ここから、ログインしていない時の表示-->
@@ -31,8 +30,16 @@
        <%= link_to "トップ", root_path %>
        <%= link_to "新規登録", new_user_registration_path %>
        <%= link_to "ログイン", new_user_session_path %>
-     <% end %>
      </div>
+     
+     <!--管理者用ヘッダー-->
+    <% elsif admin_signed_in? %>
+     <%= link_to "トップ", root_path %>
+     <%= link_to "ユーザー一覧", admin_users_path %>
+    <% end %>
+    <% end %>
+     
+     
     </header>
     
     <%= yield %>
