管理者機能アクセス制限編集

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -1,7 +1,11 @@
-ユーザー一覧
+<head>
+ <%= stylesheet_link_tag 'admin_users_index'%>
+</head>
+
+<div class="users">ユーザー一覧</div>
 <% @users.each do |user| %>
  <%= link_to  admin_user_path(user.id) do %>
   <%= image_tag user.get_profile_image(50,50) %>
  <% end %>
- <%= user.username %>
+ <p><%= user.username %></p>
 <% end %>
