--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,10 +33,10 @@
      </div>
      
      <!--管理者用ヘッダー-->
-    <% elsif admin_signed_in? %>
-     <%= link_to "トップ", root_path %>
-     <%= link_to "ユーザー一覧", admin_users_path %>
-    <% end %>
+    <%# elsif admin_signed_in? %>
+     <%#= link_to "トップ", root_path %>
+     <%#= link_to "ユーザー一覧", admin_users_path %>
+    <%# end %>
     <% end %>
      
      
