--- a/app/assets/stylesheets/admin_users_show.scss
+++ b/app/assets/stylesheets/admin_users_show.scss
@@ -2,17 +2,14 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  color: #6c6b6b;
 }
 
-
-/*プロフィール写真、ユーザーネーム、自己紹介、プロフィール編集の枠*/
-.main-visual2{
-text-align: left;
-padding-left: 200px;
-padding-bottom: 60px;
-background-color: #F5F5F5	;
-}
+// .main-visual2{
+// text-align: left;
+// padding-left: 200px;
+// padding-bottom: 60px;
+// background-color: #F5F5F5	;
+// }
 
 .mypage{
   padding-top: 20px;
@@ -21,6 +18,10 @@ background-color: #F5F5F5	;
   font-family: Hiragino Sans W6;
 }
 
+/*プロフィール編集リンク*/
+// .profile_link{
+//   padding: 10px;
+// }
 /*ユーザーネーム*/
 .user_name{
   font-size: 30px;
@@ -57,8 +58,4 @@ font-family: HiraMinProN-W6;
    display: flex;
    flex-wrap: wrap;
    width: auto;
-}
-
-body {
-  background-image: image-url("hoge.jpg");
 }
