管理者機能レイアウト編集

--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -1,7 +1,8 @@
 <head>
  <%= stylesheet_link_tag 'admin_users_show'%>
 </head>
- 
+
+ <div class="main-visual2">
  <div class="mypage">ユーザー詳細ページ</div>
     
     <!--プロフィール写真-->
@@ -29,3 +30,4 @@
   <% end %>
   </div>
   </div>
+ </main>
