--- a/app/assets/stylesheets/admin_users_show.scss
+++ b/app/assets/stylesheets/admin_users_show.scss
@@ -4,12 +4,12 @@
   box-sizing: border-box;
 }
 
-// .main-visual2{
-// text-align: left;
-// padding-left: 200px;
-// padding-bottom: 60px;
-// background-color: #F5F5F5	;
-// }
+.main-visual2{
+text-align: left;
+padding-left: 200px;
+padding-bottom: 60px;
+background-color: #F5F5F5	;
+}
 
 .mypage{
   padding-top: 20px;
