--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,8 +34,9 @@
      
      <!--管理者用ヘッダー-->
     <%# elsif admin_signed_in? %>
-     <%#= link_to "トップ", root_path %>
      <%#= link_to "ユーザー一覧", admin_users_path %>
+     <%#= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
+     </div>  
     <%# end %>
     <% end %>
      
