実装フェーズ2完了

--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -7,6 +7,6 @@
  　  　<%= link_to  admin_user_path(user.id) do %>
  　  　　 <%= image_tag user.get_profile_image(50,50) %>
  　  　<% end %>
-       <div class=index_username><%= user.username %></div>
+      <div class=index_username><%= user.username %></>
     <% end %>
  
