--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -16,6 +16,8 @@
  <div class="profile_link">
  <%= link_to "プロフィール編集", edit_user_path(@user.id) %>
  </div>
+ 
+ <%= link_to "いいね一覧",  favorites_userpath(@user) %>
 
 <!--プロフィール写真-->
  <%= image_tag @user.get_profile_image(100,100)  %>
