--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,10 +13,13 @@
  <!--ログインフラッシュメッセージ-->
  <p><%= flash[:notice] %></p>
  
- <div class="profile_link">
+ <div class="link">
  <%= link_to "プロフィール編集", edit_user_path(@user.id) %>
+ <%= link_to "いいね一覧",user_likes_path(@user.id) %>
  </div>
 
+ 
+ 
 <!--プロフィール写真-->
  <%= image_tag @user.get_profile_image(100,100)  %>
  
