--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -23,6 +23,23 @@
 <div class ="post_created">
  <%= @post.created_at.strftime('%Y/%m/%d') %>
 </div>
+
+<div class="like">
+ <% if @post.liked_by?(current_user) %>
+  <p>
+   <%= link_to post_like_path(@post), method: :delete do %>
+     ♥<%= @post.likes.count %> いいね
+   <% end %>
+  </p>
+   <% else %>
+  <p>
+   <%= link_to likes_path(@post), method: :post do %>
+     ♡<%= @post.likes.count %> いいね
+   <% end %>
+  </p>
+ <% end %>
+</div>
+
 <div class="shop_road_name">施設や道の場所名
 <p><%= @post.title %></p>
 </div>
