--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -33,7 +33,7 @@
   </p>
    <% else %>
   <p>
-   <%= link_to likes_path(@post), method: :post do %>
+   <%= link_to post_likes_path(@post.id), method: :post do %>
      ♡<%= @post.likes.count %> いいね
    <% end %>
   </p>
