いいね実装追加

--- a/app/views/likes/index.html.erb
+++ b/app/views/likes/index.html.erb
@@ -1,10 +1,9 @@
 <%= @user.username %>のいいね一覧
-<!--<%# if @likes count == 0 %>-->
-<!-- <p>いいねはまだありません</p>-->
-<!--<%# else %>-->
-<% @posts.each do |post| %>
- <%= post.title %>
- <%#= link_to post_path(post.id) do %>
-  <%#= image_tag post.image, size: "300x300" %>
- <%# end %>  
-<% end %>
+<% if @post.likes.count = 0 %>
+ <p>いいねした投稿はまだありません</p>
+<% else %>
+ <% @posts.each do |post| %>
+  <%= link_to post_path(post.id) do %>
+  <%= image_tag post.image, size: "300x300" %>
+ <% end %> 
+<% end %> 
