--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -27,7 +27,7 @@
 <div class="like">
  <% if @post.liked_by?(current_user) %>
   <p>
-   <%= link_to post_like_path(@post), method: :delete do %>
+   <%= link_to post_likes_path(@post), method: :delete do %>
      ♥<%= @post.likes.count %> いいね
    <% end %>
   </p>
