[add]いいね機能

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -15,6 +15,7 @@
  
  <div class="profile_link">
  <%= link_to "プロフィール編集", edit_user_path(@user.id) %>
+ <%= link_to "いいね一覧",user_likes_path(@user.id) %>
  </div>
 
 <!--プロフィール写真-->
