マップ機能追加

--- a/app/assets/stylesheets/posts_new.scss
+++ b/app/assets/stylesheets/posts_new.scss
@@ -16,6 +16,11 @@
   text-align: center;
 }
 
+.post_adress{
+ text-align: center; 
+ margin-top: 50px;
+}
+
 .post_new_image{
   text-align: center;
   margin-top: 50px;
