--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -17,6 +17,11 @@
 
 
  <%= form_with model: @post do |f| %>
+  <div class="post_adress">
+   <%= text_field_tag :zipcode, nil, class: "form-control", placeholder: "郵便番号" %>
+   <%= f.text_field :address, class: "form-control", placeholder: "住所" %>
+  </div>
+  
 　<div class="post_new_image">投稿画像</br>
   <%= f.file_field :image, accept: "image/*" %>
   </div>
@@ -30,5 +35,8 @@
 	</div>
 	
 	<div class="post_button"><%= f.submit '投稿' %></div>
+	
+	
+	<%#= javascript_pack_tag "jpostal",  'data-turbolinks-track': 'reload' %>
   
  <% end %>
