--- a/app/assets/stylesheets/posts_show.scss
+++ b/app/assets/stylesheets/posts_show.scss
@@ -48,6 +48,12 @@
   padding: 20px;
 }
 
+.map{
+  text-align: center;
+  margin-top: 30px;
+  margin-bottom: 50px;
+}
+
 .post_edit{
   text-align: center;
   margin-top: 50px;
