--- a/app/assets/stylesheets/posts_edit.scss
+++ b/app/assets/stylesheets/posts_edit.scss
@@ -12,6 +12,11 @@
   font-family: Hiragino Sans W6;
 }
 
+.edit_post_adress{
+  text-align: center;
+  margin-top: 50px;
+}
+
 .edit_post_image{
   text-align: center;
   margin-top: 50px;
