--- a/app/assets/stylesheets/posts_show.scss
+++ b/app/assets/stylesheets/posts_show.scss
@@ -34,6 +34,11 @@
   font-size:15px;
 }
 
+.favorite{
+  text-align: center;
+  padding: 20px;
+}
+
 .shop_road_name{
   text-align: center;
   font-family: Hiragino Sans W6;
