--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -26,6 +26,23 @@
 </div>
 
 
+<div class="favorite">
+ <% if @post.favorited_by?(current_user) %>
+  <p>
+   <%= link_to post_favorite_path(@post), method: :delete do %>
+    ♥<%= @post.favorites.count %> いいね
+  <% end %>
+  </p>
+  <% else %>
+  <p>
+    <%= link_to post_favorite_path(@post), method: :post do %>
+     ♡<%= @post.favorites.count %> いいね
+   <% end %>
+   </p>
+ <% end %>
+</div>
+
+
 <div class="shop_road_name">施設や道の場所名
  <p><%= @post.title %></p>
 </div>
