--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -23,13 +23,12 @@
   <div class="oshimeguri_introduce">〜推し巡りとは〜</div>
   
   <div class="oshimeguri_introduce2">
-   このウェブサイトは、いわゆる推しが訪れた場所を聖地巡礼して、</br>
+   このウェブサイトはいわゆる推しが訪れた場所を聖地巡礼して</br>
    そのオタ活を投稿して情報発信することを目的としたコミュニティーサイトです。</br>
-   投稿検索などで他の聖地巡礼スポットを発見したり、</br>
+   投稿検索などで他の聖地巡礼スポットを発見したり</br>
    ユーザー検索で検索したユーザーの投稿一覧などを見ることができます。</br>
-   皆さんにとって、もっと楽しいオタ活ライフになる１つのサイトとなれたらと思います。
+   皆さんにとってもっと楽しいオタ活ライフになる１つのサイトとなれたらと思います。
   </div>
-  <!--この辺りに感じがわかる写真貼り付けたい-->
   
  </main>
  </body>
