ゲストログイン機能修正途中

--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -10,6 +10,7 @@
    </div>
    <br>
    <div><%= link_to 'ゲストログイン（閲覧用）', users_guest_sign_in_path, method: :post %></div>
+    <!--class: "btn btn-secondary btn-sm btn-block mb-3 sign_in", method: :post-->
    </br>
    <div class="log_in">
     <%= link_to "ログイン", new_user_session_path %>
