--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,6 +4,7 @@
 
 <body>
  
+ 
 <% if user_signed_in? && @user == current_user %>
 <div class="main-visual2">
  
@@ -18,6 +19,10 @@
  <%= link_to "いいね一覧", user_favorites_path(@user.id) %>
  </div>
  
+<% if @user.email != "guest@example.com" %>
+  <%= link_to "プロフィール編集",edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
+<% end %>
+ 
 <!--プロフィール写真-->
  <%= image_tag @user.get_profile_image(100,100)  %>
  
@@ -28,6 +33,7 @@
  <div class="introduction"><%= @user.introduction %></div>
  
 </div>
+
  
 <main>
  <div class="my_posts_list">自分の投稿一覧</div>
