--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -18,7 +18,7 @@
  <%= link_to "プロフィール編集", edit_user_path(@user.id) %>
  <%= link_to "いいね一覧", user_favorites_path(@user.id) %>
  </div>
- 
+ <!--ゲストユーザーの場合はプロフィール編集画面に遷移できないようにする-->
 <% if @user.email != "guest@example.com" %>
   <%= link_to "プロフィール編集",edit_user_path(user),class: "btn btn-outline-secondary btn-block fas fa-user-cog edit_user_#{user.id}" %>
 <% end %>
