評価後の修正

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -30,11 +30,10 @@ header{
 
 .header-bottom{
   width: 100%;
-  color: black;
+  color: white;
 }
 
 footer{
-  
   background-color: #808080;
   color: white;
   text-align: center;
