--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -61,7 +61,6 @@
 </div>
 <div class="post_delete">
  <%= link_to "投稿削除", post_path(@post), method: :delete, "data-confirm"=>"本当に消しますか？"  %>
- <%#= link_to "Destroy",book_path(@book), method: :delete, "data-confirm"=>"本当に消しますか？" %>
 </div>
 <% end %>
 
@@ -77,7 +76,7 @@
     <p><%= post_comment.user.username %></p>
     <%= post_comment.created_at.strftime('%Y/%m/%d') %>
      <% if post_comment.user == current_user %>
-      <%= link_to "コメント削除", post_post_comment_path(post_comment.post, post_comment), method: :delete %>
+      <%= link_to "コメント削除", post_post_comment_path(post_comment.post, post_comment), method: :delete, "data-confirm"=>"コメントを削除しますか？" %>
     <% end %>
     
     <p><%= post_comment.comment %></p>
