posts/showアドレス欄追加

--- a/app/assets/stylesheets/posts_show.scss
+++ b/app/assets/stylesheets/posts_show.scss
@@ -39,6 +39,11 @@
   padding: 20px;
 }
 
+.post_adress{
+  text-align: center;
+  padding: 20px;
+}
+
 .shop_road_name{
   text-align: center;
   font-family: Hiragino Sans W6;
